Re-indent all html files

--- a/directions.html
+++ b/directions.html
@@ -91,29 +91,15 @@
 					<li class="sliding-middle-out"><a href="sponsors.html">Sponsors</a></li>
 					<li class="social-media">
 						<a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
-							<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img>
-						</a>
-					</li>
-					<li>
-						<a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
-							<img src="images/twitter.png" class="twitter" </img>
-						</a>
-					</li>
-					<li>
-						<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
-							<img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img>
-						</a>
-					</li>
-					<li>
-						<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
-							<img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img>
-						</a>
-					</li>
-				</ul>
+							<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img> </a> </li> <li>
+							<a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
+								<img src="images/twitter.png" class="twitter" </img> </a> </li> <li>
+								<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
+									<img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img> </a> </li> <li>
+									<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
+										<img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img> </a> </li> </ul> </div> <!-- /.navbar-collapse -->
 			</div>
-			<!-- /.navbar-collapse -->
-		</div>
-		<!-- /.container -->
+			<!-- /.container -->
 	</nav>
 </head>
 
@@ -153,7 +139,7 @@
 					<div id="collapse1" class="panel-collapse collapse ">
 						<div class="panel-body">
 							<iframe alt="The Edge Map" width="100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=The%20Edge%20Pub%20Lake%20Wissota%20Chippewa%20Falls%2C%20WI%2C%20United%20States&key=AIzaSyA1IUIDhvPVhbJZRFE90daaIOKWi_mG7YM"
-							allowfullscreen></iframe>
+							  allowfullscreen></iframe>
 						</div>
 					</div>
 				</div>
@@ -168,7 +154,8 @@
 					</a>
 					<div id="collapse2" class="panel-collapse collapse">
 						<div class="panel-body">
-							<iframe alt="The View Map" width="100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=The%20View%20Chippewa%20Falls%2C%20WI%2C%20United%20States&key=AIzaSyA1IUIDhvPVhbJZRFE90daaIOKWi_mG7YM" allowfullscreen></iframe>
+							<iframe alt="The View Map" width="100%" height="450" frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?q=The%20View%20Chippewa%20Falls%2C%20WI%2C%20United%20States&key=AIzaSyA1IUIDhvPVhbJZRFE90daaIOKWi_mG7YM"
+							  allowfullscreen></iframe>
 						</div>
 					</div>
 				</div>
