--- a/index-before.html
+++ b/index-before.html
@@ -49,7 +49,7 @@
 			<div class="navbar-header">
 				<button class="navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button">
 					<span class="menuTrigger" id="hamburger-one">
-							<span class="mainLine"></span>
+						<span class="mainLine"></span>
 					</span>
 				</button>
 				<a class="navbar-brand" href="index.html">
@@ -85,29 +85,15 @@
 
 					<li class="social-media">
 						<a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
-							<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img>
-						</a>
-					</li>
-					<li>
-						<a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
-							<img src="images/twitter.png" class="twitter" </img>
-						</a>
-					</li>
-					<li>
-						<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
-							<img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img>
-						</a>
-					</li>
-					<li>
-						<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
-							<img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img>
-						</a>
-					</li>
-				</ul>
+							<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img> </a> </li> <li>
+							<a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
+								<img src="images/twitter.png" class="twitter" </img> </a> </li> <li>
+								<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
+									<img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img> </a> </li> <li>
+									<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
+										<img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img> </a> </li> </ul> </div> <!-- /.navbar-collapse -->
 			</div>
-			<!-- /.navbar-collapse -->
-		</div>
-		<!-- /.container -->
+			<!-- /.container -->
 	</nav>
 </head>
 
@@ -150,22 +136,21 @@
 						</div>
 
 						<a class="left carousel-control" href="#carousel-example-generic" data-slide="prev">
-                   <span class="glyphicon glyphicon-chevron-left"></span></a><a class="right carousel-control"
-                       href="#carousel-example-generic" data-slide="next"><span class="glyphicon glyphicon-chevron-right">
-                       </span></a>
+							<span class="glyphicon glyphicon-chevron-left"></span></a><a class="right carousel-control" href="#carousel-example-generic" data-slide="next"><span class="glyphicon glyphicon-chevron-right">
+							</span></a>
 					</div>
 
 
 					<div class="sponsors">
 						<a href="http://www.scheels.com" target="_blank">
-	             <img class="indexTitleSponsor" src="images/sponsors/scheelsLarge.png" alt="Scheels">
-	           </a>
+							<img class="indexTitleSponsor" src="images/sponsors/scheelsLarge.png" alt="Scheels">
+						</a>
 
 						<a href="http://www.gordyscountymarket.net" target="_blank">
-             <img class="indexTitleSponsor" src="images/sponsors/gordysLarge.png" alt="Gordy's County Market"></a>
+							<img class="indexTitleSponsor" src="images/sponsors/gordysLarge.png" alt="Gordy's County Market"></a>
 
 						<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank">
-					<img class="indexTitleSponsor" src="images/sponsors/Subway.png" alt="Subway"></a>
+							<img class="indexTitleSponsor" src="images/sponsors/Subway.png" alt="Subway"></a>
 					</div>
 
 				</div>
@@ -217,7 +202,7 @@
 							catch and register the tagged fish! Prizes awarded to
 							the top 25 fish by weight and every 5th place thereafter
 							to 300th place so even a small fish can win big!  <b>Each
-							participant may register one fish per ticket</b>; tickets are $25
+								participant may register one fish per ticket</b>; tickets are $25
 							with no limit on the number of tickets an individual can purchase. 
 							Raffle prizes include a <b>2017 Polaris Sportsman 450 4-wheeler</b>,
 							raffle tickets are $5 each or 5 for $20! Prizes for the top fish
@@ -225,10 +210,10 @@
 						</blockquote>
 						<p>
 							<i>
-									All state regulations and bag limits apply and no person may bring in
-									more than the legal limit of fish allowed, which for this contest
-									includes northern, walleye, and pan fish (perch, bluegills, crappies).
-								</i>
+								All state regulations and bag limits apply and no person may bring in
+								more than the legal limit of fish allowed, which for this contest
+								includes northern, walleye, and pan fish (perch, bluegills, crappies).
+							</i>
 						</p>
 						<br />
 						<!-- BREAK -->
@@ -268,10 +253,10 @@
 
 		<p>
 			<i>
-			The Wissota Lions Club will have food and beverages available on the ice. All state regulations and bag limits
-			apply to this rule and no person may bring in more than the legal limit of fish allowed, which for this contest
-			includes, northern, walleye, and panfish (perch, bluegills, crappies).<a href="http://dnr.wi.gov/topic/fishing/regulations/"> Click here to reference the Wisconsin DNR website. </a>
-		</i>
+				The Wissota Lions Club will have food and beverages available on the ice. All state regulations and bag limits
+				apply to this rule and no person may bring in more than the legal limit of fish allowed, which for this contest
+				includes, northern, walleye, and panfish (perch, bluegills, crappies).<a href="http://dnr.wi.gov/topic/fishing/regulations/"> Click here to reference the Wisconsin DNR website. </a>
+			</i>
 		</p>
 
 		<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
