--- a/lodging.html
+++ b/lodging.html
@@ -86,29 +86,15 @@
 					<li class="sliding-middle-out"><a href="sponsors.html">Sponsors</a></li>
 					<li class="social-media">
 						<a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
-							<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img>
-						</a>
-					</li>
-					<li>
-						<a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
-							<img src="images/twitter.png" class="twitter" </img>
-						</a>
-					</li>
-					<li>
-						<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
-							<img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img>
-						</a>
-					</li>
-					<li>
-						<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
-							<img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img>
-						</a>
-					</li>
-				</ul>
+							<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img> </a> </li> <li>
+							<a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
+								<img src="images/twitter.png" class="twitter" </img> </a> </li> <li>
+								<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
+									<img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img> </a> </li> <li>
+									<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
+										<img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img> </a> </li> </ul> </div> <!-- /.navbar-collapse -->
 			</div>
-			<!-- /.navbar-collapse -->
-		</div>
-		<!-- /.container -->
+			<!-- /.container -->
 	</nav>
 </head>
 
@@ -126,7 +112,7 @@
 					<br />
 					<!-- BREAK -->
 					<h2 class="headers">Lodging</h2>
-					<br/>
+					<br />
 				</div>
 				<div class="row">
 
@@ -146,14 +132,14 @@
 					</div>
 				</div>
 				-->
-				<div class="row">
-					<h2 class="headers">Hotels & Motels in Eau Claire</h2>
-					<br/>
-					<p>
-						Eau Claire has plenty of hotels and motels, with plenty of amenities, in plenty of locations.
-						Want to be on the North side of the city? How about right smack dab in the
-						<a href="https://www.visiteauclaire.com/plan/maps" target="_blank">middle of downtown</a>? We have a place just for you.
-					</p>
+					<div class="row">
+						<h2 class="headers">Hotels & Motels in Eau Claire</h2>
+						<br />
+						<p>
+							Eau Claire has plenty of hotels and motels, with plenty of amenities, in plenty of locations.
+							Want to be on the North side of the city? How about right smack dab in the
+							<a href="https://www.visiteauclaire.com/plan/maps" target="_blank">middle of downtown</a>? We have a place just for you.
+						</p>
 
 						<p>
 							There are a variety of hotels in Eau Claire as well as, motels, inns and B&B’s to make your next trip to this region a unique and special experience.
