--- a/prizes.html
+++ b/prizes.html
@@ -86,29 +86,15 @@
 					<li class="sliding-middle-out"><a href="sponsors.html">Sponsors</a></li>
 					<li class="social-media">
 						<a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
-							<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img>
-						</a>
-					</li>
-					<li>
-						<a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
-							<img src="images/twitter.png" class="twitter" </img>
-						</a>
-					</li>
-					<li>
-						<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
-							<img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img>
-						</a>
-					</li>
-					<li>
-						<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
-							<img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img>
-						</a>
-					</li>
-				</ul>
+							<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img> </a> </li> <li>
+							<a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
+								<img src="images/twitter.png" class="twitter" </img> </a> </li> <li>
+								<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
+									<img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img> </a> </li> <li>
+									<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
+										<img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img> </a> </li> </ul> </div> <!-- /.navbar-collapse -->
 			</div>
-			<!-- /.navbar-collapse -->
-		</div>
-		<!-- /.container -->
+			<!-- /.container -->
 	</nav>
 </head>
 
@@ -130,20 +116,20 @@
 							<div class="carousel-inner">
 								<div class="item active">
 									<img src="images/prizes/crop_prize.PNG" alt="First Slide">
-									</div>
 								</div>
-								<!-- Carousel controls -->
-								<a class="carousel-control left" href="#myCarousel" data-slide="prev">
-									<span class="glyphicon glyphicon-chevron-left"></span>
-								</a>
-								<a class="carousel-control right" href="#myCarousel" data-slide="next">
-									<span class="glyphicon glyphicon-chevron-right"></span>
-								</a>
 							</div>
+							<!-- Carousel controls -->
+							<a class="carousel-control left" href="#myCarousel" data-slide="prev">
+								<span class="glyphicon glyphicon-chevron-left"></span>
+							</a>
+							<a class="carousel-control right" href="#myCarousel" data-slide="next">
+								<span class="glyphicon glyphicon-chevron-right"></span>
+							</a>
 						</div>
 					</div>
 				</div>
 			</div>
+		</div>
 	</section>
 
 
@@ -151,13 +137,13 @@
 	<div class="container">
 		<div class="panel panel-default">
 			<a data-toggle="collapse" data-parent="#accordion" href="#collapse3">
-					<div class="panel-heading">
-						<h4 class="panel-title">
-							Fish Prize List 2019
-						</h4>
-						<span class="glyphicon glyphicon-chevron-down expand-arrow"></span>
-					</div>
-				</a>
+				<div class="panel-heading">
+					<h4 class="panel-title">
+						Fish Prize List 2019
+					</h4>
+					<span class="glyphicon glyphicon-chevron-down expand-arrow"></span>
+				</div>
+			</a>
 			<div id="collapse3" class="panel-collapse collapse ">
 				<div class="panel-body">
 					<div class="row">
@@ -172,13 +158,13 @@
 		</div>
 		<div class="panel panel-default">
 			<a data-toggle="collapse" data-parent="#accordion" href="#collapse4">
-					<div class="panel-heading">
-						<h4 class="panel-title">
-							Raffle Prize List 2019
-						</h4>
-						<span class="glyphicon glyphicon-chevron-down expand-arrow"></span>
-					</div>
-				</a>
+				<div class="panel-heading">
+					<h4 class="panel-title">
+						Raffle Prize List 2019
+					</h4>
+					<span class="glyphicon glyphicon-chevron-down expand-arrow"></span>
+				</div>
+			</a>
 			<div id="collapse4" class="panel-collapse collapse ">
 				<div class="panel-body">
 					<div class="row">
@@ -193,13 +179,13 @@
 		</div>
 		<div class="panel panel-default">
 			<a data-toggle="collapse" data-parent="#accordion" href="#collapse1">
-					<div class="panel-heading">
-						<h4 class="panel-title">
-							Fish Prize List 2018
-						</h4>
-						<span class="glyphicon glyphicon-chevron-down expand-arrow"></span>
-					</div>
-				</a>
+				<div class="panel-heading">
+					<h4 class="panel-title">
+						Fish Prize List 2018
+					</h4>
+					<span class="glyphicon glyphicon-chevron-down expand-arrow"></span>
+				</div>
+			</a>
 			<div id="collapse1" class="panel-collapse collapse ">
 				<div class="panel-body">
 					<div class="row">
