--- a/schedule.html
+++ b/schedule.html
@@ -48,13 +48,13 @@
 			<!-- Brand and toggle get grouped for better mobile display -->
 			<div class="navbar-header">
 				<button class="navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button">
-						<span class="menuTrigger" id="hamburger-one">
-							<span class="mainLine"></span>
-						</span>
-					</button>
+					<span class="menuTrigger" id="hamburger-one">
+						<span class="mainLine"></span>
+					</span>
+				</button>
 				<a class="navbar-brand" href="index.html">
-						<img alt="logo" src="images/logo.png" />
-					</a>
+					<img alt="logo" src="images/logo.png" />
+				</a>
 				<!-- Logo top aligns with navbar text top. -->
 			</div>
 			<!-- Collect the nav links, forms, and other content for toggling -->
@@ -86,29 +86,15 @@
 					<li class="sliding-middle-out"><a href="sponsors.html">Sponsors</a></li>
 					<li class="social-media">
 						<a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
-								<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img>
-							</a>
-					</li>
-					<li>
-						<a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
-								<img src="images/twitter.png" class="twitter" </img>
-							</a>
-					</li>
-					<li>
-						<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
-								<img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img>
-							</a>
-					</li>
-					<li>
-						<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
-								<img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img>
-							</a>
-					</li>
-				</ul>
+							<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img> </a> </li> <li>
+							<a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
+								<img src="images/twitter.png" class="twitter" </img> </a> </li> <li>
+								<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
+									<img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img> </a> </li> <li>
+									<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
+										<img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img> </a> </li> </ul> </div> <!-- /.navbar-collapse -->
 			</div>
-			<!-- /.navbar-collapse -->
-		</div>
-		<!-- /.container -->
+			<!-- /.container -->
 	</nav>
 </head>
 
