--- a/sponsors.html
+++ b/sponsors.html
@@ -82,128 +82,110 @@
 					<li class="sliding-middle-out"><a href="sponsors.html">Sponsors</a></li>
 					<li class="social-media">
 						<a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
-							<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img>
-						</a>
-					</li>
-					<li>
-						<a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
-							<img src="images/twitter.png" class="twitter" </img>
-						</a>
-					</li>
-					<li>
-						<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
-							<img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img>
-						</a>
-					</li>
-					<li>
-						<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
-							<img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img>
-						</a>
-					</li>
-				</ul>
-			</div>
-		</div>
-	</nav>
-</head>
-
-<body>
-	<br/>
-	<br/>
-	<section id="prizeGrid">
-		<div class="container">
-			<div class="row">
-				<div class="text-center">
-					<h2 class="headers"><b>Title Sponsors</b></h2>
-				</div>
-				<br/>
-				<br/>
-				<div class="col-sm-4 center">
-					<a href="http://www.scheels.com" target="_blank" id="sponsor"><img class="img-responsive center img-large" src="images/sponsors/scheels.png" alt="Scheels"></a>
-				</div>
-				<div class="col-sm-4 center">
-					<a href="http://www.eauclaireford.com/" target="_blank" id="sponsor"><img class="img-responsive center img-large" src="images/sponsors/ford.png" alt="Ford"></a>
-				</div>
-				<div class="col-sm-4 center">
-					<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank" id="sponsor"><img class="img-responsive center img-large" src="images/sponsors/Subway.png" alt="Subway"></a>
-				</div>
-			</div>
-			</br>
-			<div class="text-center">
-				<h2 class="headers"><b>Sponsors</b></h2>
-				<div class="row">
-					<div class="col-sm-3 center">
-						<a href="http://www.geteskimo.com/" target="_blank" id="sponsor"><img class="img-responsive center img-med" src="images/sponsors/eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
-					</div>
-					<div class="col-sm-3 center">
-						<a href="http://www.prestigervauto.com/" target="_blank" id="sponsor"><img class="img-responsive center img-med" src="images/sponsors/prestige.png" alt="Presitge Auto Corportation"></a>
-					</div>
-					<div class="col-sm-3 center">
-						<a href="http://www.megacoop.com/" target="_blank" id="sponsor"><img class="img-responsive center img-med" src="images/sponsors/megaholiday.png" alt="Mega! CO-OP Holiday Stations"></a>
-					</div>
-					<div class="col-sm-3 center">
-						<a href="http://www.theedgepubandeatery.com/" target="_blank" id="sponsor"><img class="img-responsive center img-med" src="images/sponsors/edge.png" alt="The Edge Pub and Eatery"></a>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-sm-3 center">
-						<a href="https://www.facebook.com/wissota.view.5" target="_blank" id="sponsor"><img class="img-responsive center img-med" src="images/sponsors/view.png" alt="The View"></a>
-					</div>
-					<div class="col-sm-3 center">
-						<a href="http://www.leinie.com" target="_blank" id="sponsor"><img class="img-responsive center img-med" src="images/sponsors/lein.png" alt="Leinenkugel's"> </a>
-					</div>
-					<div class="col-sm-3 center">
-						<a href="http://www.xtrememotorsportsllc.com/" target="_blank" id="sponsor"><img class="img-responsive center img-med" src="images/sponsors/xtreme.png" alt="Xtreme Motorsports, LLC"></a>
-					</div>
-					<div class="col-sm-3 center">
-						<a href="https://www.aceautomall.com/" target="_blank" id="sponsor"><img class="img-responsive center img-med" src="images/sponsors/AceAutoMall.png" alt="Ace Auto Mall"></a>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-sm-3 center">
-						<a href="http://www.uwec.edu/dining/" target="_blank" id="sponsor"><img class="img-responsive center img-med" src="images/sponsors/dining.png" alt="Blugold Dining by Sodexo"></a>
-					</div>
-					<div class="col-sm-3 center">
-						<a href="http://www.ttmtech.com/" target="_blank" id="sponsor"><img class="img-responsive center img-med" src="images/sponsors/ttmtech.png" alt="TTM Technologies"></a>
-					</div>
-					<div class="col-sm-3 center">
-						<a href="https://mydynamicfitness.com/" target="_blank" id="sponsor"><img class="img-responsive center img-med" src="images/sponsors/Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
-					</div>
-				</div>
-				<br/>
-				<div class="row">
-					<div class="col-lg-12 center">
-						<h4 class="headers">If you wish to become a sponsor, please contact us through our contact page.</h4>
-					</div>
-				</div>
-				<br/>
-				<br/>
-				<br/>
-				<br/>
-		</section>
-				<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-				<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-				<!-- Include all compiled plugins (below), or include individual files as needed -->
-				<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-				<script src="/js/boostrap-media-lightbox.min.js"></script>
-				<script src="/js/boostrap-media-lightbox.js"></script>
-				<script src="js/lib/jquery-1.9.1.min.js" type="text/javascript"></script>
-				<script src="js/main.js" type="text/javascript"></script>
-</body>
-<footer>
-	<div class="footer hidden-xs">
-		<br/>
-		<p>
-			Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
-			<br/>
-			</p>
-	</div>
-	<div class="footer visible-xs">
-		<br/>
-		<p class="small-footer">
-			Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
-			<br/>
-			</p>
-	</div>
-</footer>
+							<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img> </a> </li> <li>
+							<a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
+								<img src="images/twitter.png" class="twitter" </img> </a> </li> <li>
+								<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
+									<img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img> </a> </li> <li>
+									<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
+										<img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img> </a> </li> </ul> </div> </div> </nav> </head> <body>
+										<br />
+										<br />
+										<section id="prizeGrid">
+											<div class="container">
+												<div class="row">
+													<div class="text-center">
+														<h2 class="headers"><b>Title Sponsors</b></h2>
+													</div>
+													<br />
+													<br />
+													<div class="col-sm-4 center">
+														<a href="http://www.scheels.com" target="_blank" id="sponsor"><img class="img-responsive center img-large" src="images/sponsors/scheels.png" alt="Scheels"></a>
+													</div>
+													<div class="col-sm-4 center">
+														<a href="http://www.eauclaireford.com/" target="_blank" id="sponsor"><img class="img-responsive center img-large" src="images/sponsors/ford.png" alt="Ford"></a>
+													</div>
+													<div class="col-sm-4 center">
+														<a href="http://www.subway.com/subwayroot/default.aspx" target="_blank" id="sponsor"><img class="img-responsive center img-large" src="images/sponsors/Subway.png" alt="Subway"></a>
+													</div>
+												</div>
+												</br>
+												<div class="text-center">
+													<h2 class="headers"><b>Sponsors</b></h2>
+													<div class="row">
+														<div class="col-sm-3 center">
+															<a href="http://www.geteskimo.com/" target="_blank" id="sponsor"><img class="img-responsive center img-med" src="images/sponsors/eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
+														</div>
+														<div class="col-sm-3 center">
+															<a href="http://www.prestigervauto.com/" target="_blank" id="sponsor"><img class="img-responsive center img-med" src="images/sponsors/prestige.png" alt="Presitge Auto Corportation"></a>
+														</div>
+														<div class="col-sm-3 center">
+															<a href="http://www.megacoop.com/" target="_blank" id="sponsor"><img class="img-responsive center img-med" src="images/sponsors/megaholiday.png" alt="Mega! CO-OP Holiday Stations"></a>
+														</div>
+														<div class="col-sm-3 center">
+															<a href="http://www.theedgepubandeatery.com/" target="_blank" id="sponsor"><img class="img-responsive center img-med" src="images/sponsors/edge.png" alt="The Edge Pub and Eatery"></a>
+														</div>
+													</div>
+													<div class="row">
+														<div class="col-sm-3 center">
+															<a href="https://www.facebook.com/wissota.view.5" target="_blank" id="sponsor"><img class="img-responsive center img-med" src="images/sponsors/view.png" alt="The View"></a>
+														</div>
+														<div class="col-sm-3 center">
+															<a href="http://www.leinie.com" target="_blank" id="sponsor"><img class="img-responsive center img-med" src="images/sponsors/lein.png" alt="Leinenkugel's"> </a>
+														</div>
+														<div class="col-sm-3 center">
+															<a href="http://www.xtrememotorsportsllc.com/" target="_blank" id="sponsor"><img class="img-responsive center img-med" src="images/sponsors/xtreme.png" alt="Xtreme Motorsports, LLC"></a>
+														</div>
+														<div class="col-sm-3 center">
+															<a href="https://www.aceautomall.com/" target="_blank" id="sponsor"><img class="img-responsive center img-med" src="images/sponsors/AceAutoMall.png" alt="Ace Auto Mall"></a>
+														</div>
+													</div>
+													<div class="row">
+														<div class="col-sm-3 center">
+															<a href="http://www.uwec.edu/dining/" target="_blank" id="sponsor"><img class="img-responsive center img-med" src="images/sponsors/dining.png" alt="Blugold Dining by Sodexo"></a>
+														</div>
+														<div class="col-sm-3 center">
+															<a href="http://www.ttmtech.com/" target="_blank" id="sponsor"><img class="img-responsive center img-med" src="images/sponsors/ttmtech.png" alt="TTM Technologies"></a>
+														</div>
+														<div class="col-sm-3 center">
+															<a href="https://mydynamicfitness.com/" target="_blank" id="sponsor"><img class="img-responsive center img-med" src="images/sponsors/Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
+														</div>
+													</div>
+													<br />
+													<div class="row">
+														<div class="col-lg-12 center">
+															<h4 class="headers">If you wish to become a sponsor, please contact us through our contact page.</h4>
+														</div>
+													</div>
+													<br />
+													<br />
+													<br />
+													<br />
+										</section>
+										<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+										<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+										<!-- Include all compiled plugins (below), or include individual files as needed -->
+										<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
+										<script src="/js/boostrap-media-lightbox.min.js"></script>
+										<script src="/js/boostrap-media-lightbox.js"></script>
+										<script src="js/lib/jquery-1.9.1.min.js" type="text/javascript"></script>
+										<script src="js/main.js" type="text/javascript"></script>
+										</body>
+										<footer>
+											<div class="footer hidden-xs">
+												<br />
+												<p>
+													Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
+													<br />
+												</p>
+											</div>
+											<div class="footer visible-xs">
+												<br />
+												<p class="small-footer">
+													Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
+													<br />
+												</p>
+											</div>
+										</footer>
 
 </html>
