--- a/ticketsInProgress.html
+++ b/ticketsInProgress.html
@@ -48,13 +48,13 @@
 			<!-- Brand and toggle get grouped for better mobile display -->
 			<div class="navbar-header">
 				<button class="navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button">
-						<span class="menuTrigger" id="hamburger-one">
-							<span class="mainLine"></span>
-						</span>
-					</button>
+					<span class="menuTrigger" id="hamburger-one">
+						<span class="mainLine"></span>
+					</span>
+				</button>
 				<a class="navbar-brand" href="index.html">
-						<img alt="logo" src="images/logo.png" />
-					</a>
+					<img alt="logo" src="images/logo.png" />
+				</a>
 				<!-- Logo top aligns with navbar text top. -->
 			</div>
 			<!-- Collect the nav links, forms, and other content for toggling -->
@@ -86,30 +86,15 @@
 					<li class="sliding-middle-out"><a href="sponsors.html">Sponsors</a></li>
 					<li class="social-media">
 						<a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
-								<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img>
-							</a>
-					</li>
-					<li>
-						<a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
-								<img src="images/twitter.png" class="twitter" </img>
-							</a>
-					</li>
-					<li>
-						<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
-								<img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img>
-							</a>
-					</li>
-					<li>
-						<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
-								<img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img>
-							</a>
-					</li>
-				</ul>
-
+							<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img> </a> </li> <li>
+							<a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
+								<img src="images/twitter.png" class="twitter" </img> </a> </li> <li>
+								<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
+									<img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img> </a> </li> <li>
+									<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
+										<img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img> </a> </li> </ul> </div> <!-- /.navbar-collapse -->
 			</div>
-			<!-- /.navbar-collapse -->
-		</div>
-		<!-- /.container -->
+			<!-- /.container -->
 	</nav>
 </head>
 
@@ -154,33 +139,34 @@
 					$7,500 in prizes includes a 2017 Polaris Sportsman 450 4-wheeler. Tickets can be purchased up until the drawing on Saturday, February 10th at the weigh-in stations and The View.
 
 					<br />
-					<br /> Raffle tickets purchased online will have the stubs completed by contest officials and entered into the drawing. Claim tickets will be mailed through February 2nd to the address indicated.  After February 2nd, claim tickets will be available for
-						pick-up at the weigh-in station in The View. NOTE: Raffle drawing begins at 3:00pm at The View. Please pick up claim tickets by 2:00pm.  Need not be present to win.
-					</blockquote>
+					<br /> Raffle tickets purchased online will have the stubs completed by contest officials and entered into the drawing. Claim tickets will be mailed through February 2nd to the address indicated. After February 2nd, claim tickets will be
+					available for
+					pick-up at the weigh-in station in The View. NOTE: Raffle drawing begins at 3:00pm at The View. Please pick up claim tickets by 2:00pm. Need not be present to win.
+				</blockquote>
 
 
-					<a target="_blank" href="assets/2018_Rules_of_the_Tournament.pdf" <button class="btn1">Click here to see the rules</button></a>
-					<br />
-					<!-- BREAK -->
-					<br />
-					<!-- BREAK -->
-					<div>
-						<h3 class="headers">Tickets can also be purchased at: </h3>
-						<ul class="list">
-							<li>Scheels</li>
-							<li>Mega Holiday Stations- Eau Claire and Chippewa Falls</li>
-							<li>Eau Claire Ford</li>
-							<li>The View at Lake Wissota</li>
-							<li>The Edge Pub &amp; Eatery on Lake Wissota</li>
-							<li>UWEC Recreation
-						</h3>
+				<a target="_blank" href="assets/2018_Rules_of_the_Tournament.pdf" <button class="btn1">Click here to see the rules</button></a>
+				<br />
+				<!-- BREAK -->
+				<br />
+				<!-- BREAK -->
+				<div>
+					<h3 class="headers">Tickets can also be purchased at: </h3>
+					<ul class="list">
+						<li>Scheels</li>
+						<li>Mega Holiday Stations- Eau Claire and Chippewa Falls</li>
+						<li>Eau Claire Ford</li>
+						<li>The View at Lake Wissota</li>
+						<li>The Edge Pub &amp; Eatery on Lake Wissota</li>
+						<li>UWEC Recreation
+							</h3>
 						</li>
-						</ul>
-					</div>
+					</ul>
+				</div>
 
-					<div class="col-sm-6">
-						PLACE OTHER INFO HERE
-					</div>
+				<div class="col-sm-6">
+					PLACE OTHER INFO HERE
+				</div>
 			</div>
 		</div>
 
@@ -204,12 +190,12 @@
 			<a href="http://www.geteskimo.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
 			<a href="http://www.prestigervauto.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/prestige.png" alt="Presitge Auto Corportation"></a>
 			<a href="http://www.uwec.edu/dining/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/dining.png" alt="Blugold Dining by Sodexo">
-					<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/edge.png" alt="The Edge Pub and Eatery"></a>
-			<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images/sponsors/view.png" alt="The View"></a>
-			<a href="http://www.gollonbait.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/gollon.png" alt="Gollon Brothers"></a>
-			<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLCXtreme Motorsports, LLC"></a>
-			<a href="https://mydynamicfitness.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
-			<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/lein.png" alt="Leinenkugel's"> </a>
+				<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/edge.png" alt="The Edge Pub and Eatery"></a>
+				<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images/sponsors/view.png" alt="The View"></a>
+				<a href="http://www.gollonbait.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/gollon.png" alt="Gollon Brothers"></a>
+				<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLCXtreme Motorsports, LLC"></a>
+				<a href="https://mydynamicfitness.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
+				<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/lein.png" alt="Leinenkugel's"> </a>
 
 		</div>
 		<p>
@@ -226,12 +212,12 @@
 				<a href="http://www.geteskimo.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/eskimo.png" alt="Eskimo Ice Fishing Gear"></a>
 				<a href="http://www.prestigervauto.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/prestige.png" alt="Presitge Auto Corportation"></a>
 				<a href="http://www.uwec.edu/dining/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/dining.png" alt="Blugold Dining by Sodexo">
-							<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/edge.png" alt="The Edge Pub and Eatery"></a>
-				<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images/sponsors/view.png" alt="The View"></a>
-				<a href="http://www.gollonbait.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/gollon.png" alt="Gollon Brothers"></a>
-				<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLCXtreme Motorsports, LLC"></a>
-				<a href="https://mydynamicfitness.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
-				<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/lein.png" alt="Leinenkugel's"> </a>
+					<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/edge.png" alt="The Edge Pub and Eatery"></a>
+					<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images/sponsors/view.png" alt="The View"></a>
+					<a href="http://www.gollonbait.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/gollon.png" alt="Gollon Brothers"></a>
+					<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLCXtreme Motorsports, LLC"></a>
+					<a href="https://mydynamicfitness.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
+					<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/lein.png" alt="Leinenkugel's"> </a>
 
 			</div>
 			Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
