--- a/wifa.html
+++ b/wifa.html
@@ -47,13 +47,13 @@
 			<!-- Brand and toggle get grouped for better mobile display -->
 			<div class="navbar-header">
 				<button class="navbar-toggle" data-target="#bs-example-navbar-collapse-1" data-toggle="collapse" type="button">
-						<span class="menuTrigger" id="hamburger-one">
-							<span class="mainLine"></span>
-						</span>
-					</button>
+					<span class="menuTrigger" id="hamburger-one">
+						<span class="mainLine"></span>
+					</span>
+				</button>
 				<a class="navbar-brand" href="index.html">
-						<img alt="logo" src="images/logo.png" />
-					</a>
+					<img alt="logo" src="images/logo.png" />
+				</a>
 				<!-- Logo top aligns with navbar text top. -->
 			</div>
 			<!-- Collect the nav links, forms, and other content for toggling -->
@@ -86,29 +86,15 @@
 
 					<li class="social-media">
 						<a target="_blank" class="fbook" href="https://www.facebook.com/pages/The-Jigs-Up-Ice-Fishing-Contest/736663866412522">
-								<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img>
-							</a>
-					</li>
-					<li>
-						<a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
-								<img src="images/twitter.png" class="twitter" </img>
-							</a>
-					</li>
-					<li>
-						<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
-								<img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img>
-							</a>
-					</li>
-					<li>
-						<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
-								<img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img>
-							</a>
-					</li>
-				</ul>
+							<img alt="Facebook Logo" src="images/facebook.png" class="fbook" </img> </a> </li> <li>
+							<a alt="Twitter Logo" target="_blank" class="twitter" href="https://twitter.com/uwecrecreation">
+								<img src="images/twitter.png" class="twitter" </img> </a> </li> <li>
+								<a target="_blank" class="twitter" href="https://instagram.com/UWEC_Recreation/">
+									<img alt="Instagram Logo" src="images/instagram.png" class="fbook" </img> </a> </li> <li>
+									<a target="_blank" class="twitter" href="http://www.e-clubhouse.org/sites/lakewissota/">
+										<img alt="Lion's Club Logo" src="images/lclub.png" class="lclub" </img> </a> </li> </ul> </div> <!-- /.navbar-collapse -->
 			</div>
-			<!-- /.navbar-collapse -->
-		</div>
-		<!-- /.container -->
+			<!-- /.container -->
 	</nav>
 </head>
 
@@ -138,12 +124,12 @@
 			<a href="http://www.megacoop.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/megaholiday.png" alt="Mega! CO-OP Holiday Stations"></a>
 			<a href="http://www.prestigervauto.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/prestige.png" alt="Presitge Auto Corportation"></a>
 			<a href="http://www.uwec.edu/dining/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/dining.png" alt="Blugold Dining by Sodexo">
-					<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/edge.png" alt="The Edge Pub and Eatery"></a>
-			<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images/sponsors/view.png" alt="The View"></a>
-			<a href="https://ttmtech.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/ttmtech.png" alt="TTM Technologies"></a>
-			<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLCXtreme Motorsports, LLC"></a>
-			<a href="https://mydynamicfitness.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
-			<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/lein.png" alt="Leinenkugel's"> </a>
+				<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/edge.png" alt="The Edge Pub and Eatery"></a>
+				<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images/sponsors/view.png" alt="The View"></a>
+				<a href="https://ttmtech.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/ttmtech.png" alt="TTM Technologies"></a>
+				<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLCXtreme Motorsports, LLC"></a>
+				<a href="https://mydynamicfitness.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
+				<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/lein.png" alt="Leinenkugel's"> </a>
 
 		</div>
 		<p>
@@ -161,12 +147,12 @@
 				<a href="http://www.megacoop.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/megaholiday.png" alt="Mega! CO-OP Holiday Stations"></a>
 				<a href="http://www.prestigervauto.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/prestige.png" alt="Presitge Auto Corportation"></a>
 				<a href="http://www.uwec.edu/dining/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/dining.png" alt="Blugold Dining by Sodexo">
-							<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/edge.png" alt="The Edge Pub and Eatery"></a>
-				<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images/sponsors/view.png" alt="The View"></a>
-				<a href="https://ttmtech.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/ttmtech.png" alt="TTM Technologies"></a>
-				<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLCXtreme Motorsports, LLC"></a>
-				<a href="https://mydynamicfitness.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
-				<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/lein.png" alt="Leinenkugel's"> </a>
+					<a href="http://www.theedgepubandeatery.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/edge.png" alt="The Edge Pub and Eatery"></a>
+					<a href="https://www.facebook.com/wissota.view.5" target="_blank"><img class="sponsorBarImg" src="images/sponsors/view.png" alt="The View"></a>
+					<a href="https://ttmtech.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/ttmtech.png" alt="TTM Technologies"></a>
+					<a href="http://www.xtrememotorsportsllc.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/XTREME MOTORSPORTS_2C_DIGITAL BLUE.png" alt="Xtreme Motorsports, LLCXtreme Motorsports, LLC"></a>
+					<a href="https://mydynamicfitness.com/" target="_blank"><img class="sponsorBarImg" src="images/sponsors/Dynamic-Logo-OnWhite.png" alt="Dynamic Fitness and Strength"></a>
+					<a href="http://www.leinie.com" target="_blank"><img class="sponsorBarImg" src="images/sponsors/lein.png" alt="Leinenkugel's"> </a>
 
 			</div>
 			Recreation | Hilltop 105 | Eau Claire, WI 54702 | 715-836-3377 | <a href="mailto:recreation@uwec.edu">recreation@uwec.edu</a>
